# W

DiscordCodeReviewer/: app.py  bot.py  pyproject.toml  requirements.txt
DiscordCodeReviewer/cogs/: __init__.py  ai.py  coven.py  economy.py  images.py  moderation.py  music.py  onboarding.py  permissions.py  sass.py  scheduler.py  setup.py  tarot.py
DiscordCodeReviewer/config/: __init__.py  channels.py
DiscordCodeReviewer/coven_ai/: __init__.py  client.py
DiscordCodeReviewer/data/: moderation.db
